# ob-test-project

./: README.md  obproject.toml  pyproject.toml
.github/workflows/: deploy.yml
flows/helloflow/: flow.py
src/mymodule/: __init__.py  main.py
